--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ schematics/uploaded
 kubejs/README.txt
 kubejs/exported
 kubejs/probe
+
+## 奇怪的东西 每次开游戏/进世界都会被更新 忽略掉
+config/defaultworldtype/world-presets.txt
+config/jei/world
+config/skyblockbuilder/data
