任务，标题和图标（暂定）

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,12 @@ schematics/uploaded
 kubejs/README.txt
 kubejs/exported
 kubejs/probe
+kubejs/config/probejs.json
 
 ## 奇怪的东西 每次开游戏/进世界都会被更新 忽略掉
 config/defaultworldtype/world-presets.txt
 config/jei/world
 config/skyblockbuilder/data
+config/embeddium-fingerprint.json
+config/fml/toml
+config/jei
