移除任务模组

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 !.gitignore
 !config/
 !config/**
-!defaultconfigs/
-!defaultconfigs/**
+# !defaultconfigs/
+# !defaultconfigs/**
 !mods/
 !mods/**
 !schematics/
