添加模组：Lychee与Kiwi，添加耕地类作物的腐烂

--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -3,3 +3,4 @@ net.minecraftforge.fluids.FluidStack
 com.petrolpark.destroy.chemistry.Molecule
 fr.frinn.custommachinery.impl.integration.jei.Energy
 fr.frinn.custommachinery.impl.integration.jei.Experience
+snownee.lychee.core.post.PostAction
