修改了一些进度的类型和完成方式

--- a/config/spoiled-common.toml
+++ b/config/spoiled-common.toml
@@ -13,9 +13,9 @@
 	#When enabled Spoiled initializes spoiling for all vanilla food [default: true]
 	initializeSpoiling = true
 	#When enabled enables a special recipe to merge spoiling food together [default: false]
-	mergeSpoilingFood = false
+	mergeSpoilingFood = true
 	#When enabled Spoiled makes every edible item spoil into the specified Spoil Item (This overwrites json spoiling completely) [default: false]
-	spoilEverything = false
+	spoilEverything = true
 	#Defines a list of items that are never allowed to spoil
 	spoilBlacklist = ["minecraft:rotten_flesh", "minecraft:enchanted_golden_apple"]
 	#Defines the total amount of spoiling updates that is used by the default initialized spoiling when 'initializeSpoiling' is enabled 
