--- a/config/spoiled-common.toml
+++ b/config/spoiled-common.toml
@@ -15,7 +15,7 @@
 	#When enabled enables a special recipe to merge spoiling food together [default: false]
 	mergeSpoilingFood = true
 	#When enabled Spoiled makes every edible item spoil into the specified Spoil Item (This overwrites json spoiling completely) [default: false]
-	spoilEverything = true
+	spoilEverything = false
 	#Defines a list of items that are never allowed to spoil
 	spoilBlacklist = ["minecraft:rotten_flesh", "minecraft:enchanted_golden_apple"]
 	#Defines the total amount of spoiling updates that is used by the default initialized spoiling when 'initializeSpoiling' is enabled 
