--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ kubejs/config/probejs.json
 
 ## 奇怪的东西 每次开游戏/进世界都会被更新 忽略掉
 config/defaultworldtype/world-presets.txt
+config/sidebar_buttons.json
 config/jei/
 config/jei/**
 config/skyblockbuilder/data
