跳舞树有点问题

--- a/config/squatgrow-common.yaml
+++ b/config/squatgrow-common.yaml
@@ -16,7 +16,7 @@ requireHoe: true
 requirements:
     durabilityDamage: 0
     enabled: true
-    heldItemRequirement: ["#minecraft:hoes"]
+    heldItemRequirement: "#minecraft:hoes"
     requiredEnchantment: ""
     requiredItemTakesDamage: true
 useWhitelist: false
