--- a/config/spoiled-common.toml
+++ b/config/spoiled-common.toml
@@ -23,5 +23,5 @@
 	#Range: > 1
 	defaultSpoilTime = 5
 	#Defines the item the foods vanilla foods will turn into when spoiled (if empty it will clear the spoiling item) [default: 'minecraft:rotten_flesh']
-	defaultSpoilItem = "minecraft:rotten_flesh"
+	defaultSpoilItem = "cookies:putrefaction"
 
